# WAISTD

./: .envrc  .gitignore  Dockerfile  README.md  deployment.yml  justfile  k8s.yml  pyproject.toml  requirements.txt
deployments/: dev.yml  prod.yml
src/: constants.py  main.py
